@@ -201,6 +201,7 @@ reference-out-of-declaratives:		ok
 numeric-value-for-edited-item:		error # not verified yet
 incorrect-conf-sec-order:		error
 define-constant-directive:		unconformable
+free-redefines-position:		unconformable
 
 
 # use fixed word list, synonyms and exceptions specified there
