@@ -204,6 +204,7 @@ reference-out-of-declaratives:		error
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		unconformable
+free-redefines-position:		unconformable
 
 
 # use fixed word list, synonyms and exceptions specified there
