@@ -201,6 +201,7 @@ reference-out-of-declaratives:		error
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
+free-redefines-position:		unconformable
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
