@@ -210,6 +210,7 @@ reference-out-of-declaratives:		warning
 numeric-value-for-edited-item:		ok
 incorrect-conf-sec-order:		ok
 define-constant-directive:		archaic
+free-redefines-position:		warning
 
 
 # use complete word list; synonyms and exceptions are specified below
