@@ -208,6 +208,7 @@ reference-out-of-declaratives:		error  # TO-DO: error when referring to non-USE-
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		unconformable
+free-redefines-position:		unconformable
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
